--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="numberclick"
             android:text="@string/b7"
             tools:ignore="ButtonStyle" />
 
@@ -34,6 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="numberclick"
             android:text="@string/b8"
             tools:ignore="ButtonStyle" />
 
@@ -42,6 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="numberclick"
             android:text="@string/b9"
             tools:ignore="ButtonStyle" />
 
@@ -64,6 +67,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="numberclick"
             android:text="@string/b4"
             tools:ignore="ButtonStyle" />
 
@@ -72,6 +76,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="numberclick"
             android:text="@string/b5"
             tools:ignore="ButtonStyle" />
 
@@ -80,6 +85,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="numberclick"
             android:text="@string/b6"
             tools:ignore="ButtonStyle" />
 
@@ -102,6 +108,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="numberclick"
             android:text="@string/b1"
             tools:ignore="ButtonStyle" />
 
@@ -110,6 +117,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="numberclick"
             android:text="@string/b2"
             tools:ignore="ButtonStyle" />
 
@@ -118,6 +126,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="numberclick"
             android:text="@string/b3"
             tools:ignore="ButtonStyle" />
 
@@ -139,6 +148,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="numberclick"
             android:text="@string/b0"
             tools:ignore="ButtonStyle" />
 
